--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+
 :root {
   --purple: rgb(93, 95, 241);
   --grey: rgba(204, 204, 204, 0.247);
 }
 
+* {
+  font-family: "Inter", sans-serif;
+}
+
 body {
   background: var(--grey);
-  font-family: "Inter", sans-serif !important;
 }
 
 h5 {
   color: #fff;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .profileCard {
@@ -53,16 +60,15 @@ h5 {
   justify-content: center;
   align-items: center;
   padding-top: 10%;
+  gap: 0;
   display: flex;
   flex-direction: column;
 }
 
 .profileCard__img {
-  background-color: white;
   height: 50px;
   width: 50px;
   margin: auto;
-  /* margin-top: 10px; */
   border-radius: 50px;
   z-index: 40;
   position: relative;
@@ -89,6 +95,10 @@ h5 {
   width: 150px;
   color: white;
   outline: none;
+  text-align: center;
+  font-size: 14px;
+  text-transform: capitalize;
+  text-decoration: none;
 }
 
 .profileCard__activities {
@@ -117,7 +127,7 @@ h5 {
   /* flex-direction: column; */
   /* justify-content: center; */
   /* align-items: center; */
-  padding-left: 10px;
+  padding-left: 20px;
 }
 
 .profileCard__activitiesGroup {
@@ -161,7 +171,7 @@ h5 {
 }
 
 .endCard {
-  height: 160px;
+  height: 140px;
 }
 
 center {
@@ -169,6 +179,6 @@ center {
   font: size 5px;
 }
 
-center>span{
-    color: var(--purple);
+center > span {
+  color: var(--purple);
 }
